# 5dv171_project

./: Makefile  README.md
common/: kvs_protocol.c  kvs_protocol.h
kernelSpace/: KeyValueStoreModule.c  Makefile  file_handler.c  file_handler.h  htable_wrapper.c  htable_wrapper.h  netlink_kvs.c  netlink_kvs.h
src/: KeyStoreModule.c  KeyValueStoreModule.c  Makefile
userSpace/: CMakeLists.txt  hashtable.c  hashtable.h  kvsdel.c  kvsget.c  kvsput.c  kvstst.c  main.c  makescript.sh  netlink_kvs.c  netlink_kvs.h  result.csv
